# Server1

./: .gitignore  CMakeLists.txt  Header.h  README.md  Server1.cpp  Server1.sln  Server1.vcxproj  Server1.vcxproj.filters
ClientPart/: ClientPart.vcxproj  Main.cpp
NetworkHandling/: CMakeLists.txt  Main.cpp  NetworkHandling.vcxproj  NetworkHandling.vcxproj.filters  glad.c
NetworkHandling/include/glad/: glad.h
NetworkHandling/lib/: PhysicModel.lib
NetworkHandling/src/: Command.h  Lobby.cpp  Lobby.h  Main.cpp  NetFix.cpp  NetFix.h  NetInput.cpp  NetInput.h  NetworkModifier.cpp  NetworkModifier.h  PacketBuffer.cpp  PacketBuffer.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerObservable.h  PlayerPlace.h  PlayerState.h  Room.cpp  Room.h  RoomState.cpp  RoomState.h  SynchronisationClock.cpp  SynchronisationClock.h  Utils.h
PhysicModel/: CMakeLists.txt  Main.cpp  PhysicModel.vcxproj  PhysicModel.vcxproj.filters
PhysicModel/src/: BasicPhysic.cpp  BasicPhysic.h  Main.cpp  TransfProxy.h  WorldHolder.cpp  WorldHolder.h
WorldVisual/: CMakeLists.txt  WorldVisual.vcxproj  WorldVisual.vcxproj.filters  main.cpp
WorldVisual/lib/: PhysicModel.lib
WorldVisual/src/: Camera.cpp  Camera.h  Font.cpp  Font.h  Instance.cpp  Instance.h  Shader.cpp  Shader.h  ShapeDisplay.cpp  ShapeDisplay.h  Text.cpp  Text.h  VertexArray.h  VertexBuffer.h  main.cpp
WorldVisual/src/shader/: fs.txt  vs.txt
WorldVisual/src/shader/text/: fs.txt
src/: Utils.h
